--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="loading-screen">
-    <h1>Happy Monthsary, Bogart! 💖</h1>
+    <h1>Happy Monthsary, Bernadeth!</h1>
     <div class="loader"></div>
   </div>
 
