--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>100 Reasons Why I Love You</title>
+  <title>BERNADETH</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Comfortaa:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="loading-screen">
+
+    <img src="1.png" class="floating-heart heart1" />
+    <img src="1.png" class="floating-heart heart2" />
+    <img src="1.png" class="floating-heart heart3" />
+    <img src="1.png" class="floating-heart heart4" />
+    <img src="1.png" class="floating-heart heart5" />
+    <img src="1.png" class="floating-heart heart6" />
+<img src="1.png" class="floating-heart heart7" />
+
+
     <h1>Happy Monthsary, Bernadeth!</h1>
     <div class="loader"></div>
   </div>
 
+  
+
   <main id="main-content" class="hidden">
     <h1 class="main-title">
-      <span id="typing-title">100 Reasons Why I Love You 💌</span>
+      <span id="typing-title">Reasons Why I Love Badeth 💌</span>
     </h1>
 
     <div class="jar-container">
